# python-s2-protocol

./: .gitignore  .gitmodules  .isort.cfg  .pre-commit-config.yaml  AUTHORS.rst  CHANGELOG.rst  Makefile  README.md  generate_models.sh  old.py  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: ci.yml
docs/: conf.py  index.rst
docs/api/: modules.rst  python_s2_protocol.FRBC.rst  python_s2_protocol.common.rst  python_s2_protocol.rst
src/python_s2_protocol/: DDBC.py  FRBC.py  OMBC.py  PEBC.py  PPBC.py  __init__.py
src/python_s2_protocol.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/python_s2_protocol/FRBC/: messages.py  schemas.py
src/python_s2_protocol/common/: messages.py  schemas.py
tests/: test_basic_types.py  test_medium_entities.py
