[project]
name = "python_s2_protocol"
version = "0.0.1"
authors = [
  { name="Victor Garcia-Reolid", email="victor@seita.nl" },
]
description = "Python wrap for the S2 Protocol"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/pypa/sampleproject"
"Bug Tracker" = "https://github.com/pypa/sampleproject/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"